<resources>
    <string name="app_name">The Guardian</string>
    <string name="no_data">No news articles found</string>
    <string name="no_network">No Network Connection</string>

    <string name="drawer_item_country_label">US</string>
    <string name="drawer_item_world_label">World</string>
    <string name="drawer_item_Politics_label">Politics</string>
    <string name="drawer_item_Media_label">Media</string>
    <string name="drawer_item_Sport_label">Sport</string>
    <string name="drawer_item_Science_label">Science</string>
    <string name="drawer_item_Technology_label">Technology</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_newest">By Newest</string>
    <string name="settings_order_by_oldest">By oldest</string>
    <string name="settings_order_by_relevance">By relevance</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>

    <string name="settings_order_by_newest_value">newest</string>
    <string name="settings_order_by_oldest_value">oldest</string>
    <string name="settings_order_by_relevance_value">relevance</string>
    <string-array name="settings_order_by_labels">
        <item>@string/settings_order_by_newest</item>
        <item>@string/settings_order_by_oldest</item>
        <item>@string/settings_order_by_relevance</item>
    </string-array>

    <string-array name="settings_order_by_values">
        <item>@string/settings_order_by_newest_value</item>
        <item>@string/settings_order_by_oldest_value</item>
        <item>@string/settings_order_by_relevance_value</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="settings_from_date_key" translatable="false">from_date</string>
    <string name="settings_from_date_title">From Date</string>
    <string name="settings_from_date_default_value" translatable="false">May 01, 2017</string>

    <string name="settings_to_date_key" translatable="false">to_date</string>
    <string name="settings_to_date_title">To date</string>
    <string name="settings_to_date_default_value" translatable="false">Aug 03, 2018</string>

    <string name="settings_category_reset_to_default_label">Reset</string>
    <string name="settings_reset_to_default_key">reset_to_default</string>
    <string name="settings_reset_to_default_title">Reset to default</string>
    <string name="settings_reset_to_default_dialogue_title">Do you want to restore all values to default</string>
    <string name="settings_reset_to_default_summary">Choose this option to restore to default settings</string>
</resources>
